# evalharness

./: .gitignore  LICENSE  README.md  SPRINT.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md
examples/: example_pipeline.py  run_demo.py  sample_questions.jsonl
src/evalharness/: __init__.py  cli.py  pipelines.py
src/evalharness/judges/: __init__.py  anthropic_judge.py  base.py  gemini_judge.py  openai_judge.py
src/evalharness/metrics/: __init__.py  base.py  builtin.py
src/evalharness/server/: __init__.py  mcp_server.py
src/evalharness/storage/: __init__.py  sqlite_store.py
tests/: __init__.py  test_metrics.py  test_pipelines.py  test_storage.py
