[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalharness"
version = "0.1.0"
description = "A zero-touch agentic evaluation harness for RAG pipelines, exposed via MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pritha Mishra", email = "pritha.mishra2003@gmail.com" }]
keywords = ["llm", "rag", "evaluation", "mcp", "agentic", "llm-as-judge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0",
    "click>=8.1",
    "anyio>=4.0",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
gemini = ["google-generativeai>=0.8"]
anthropic = ["anthropic>=0.40"]
all = ["openai>=1.0", "google-generativeai>=0.8", "anthropic>=0.40"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]

[project.scripts]
evalharness = "evalharness.cli:main"

[project.urls]
Homepage = "https://github.com/prixie/evalharness"
Issues = "https://github.com/prixie/evalharness/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
